<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
   android:background="@drawable/metal_background">
    
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:height="50dp"
	   
	    android:textColor="@android:color/white"
	    android:text="@string/win_title"
	    android:textSize="30sp"
	    android:typeface="monospace"
	    
	    />   
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:height="50dp"
	    android:gravity="left|center"
	    android:text="@string/streak_title"
	     android:textSize="20sp"
	       android:textColor="#ffffff"
	     android:id="@+id/streak_box"
	     /> 
	     
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:height="50dp"
	    android:gravity="left|center"
	    android:text="@string/bonus_title"
	     android:textSize="20sp"
	       android:textColor="#ffffff"
	     android:id="@+id/bonus_box"
	     /> 
	     
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:height="50dp"
	    android:gravity="left|center"
	    android:text="@string/total_title"
	     android:textSize="20sp"
	     android:textColor="#ffffff"
	     android:id="@+id/total_box"
	     /> 
    

</LinearLayout>
