<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/storeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:adjustViewBounds="true"
        android:background="#000000"
        android:contentDescription="@string/demo_content_description"
        android:maxHeight="150dp"
        android:padding="1dp"
        android:scaleType="fitXY"
        android:src="@drawable/store_view_sample" />

    <TextView
        android:id="@+id/costText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="left"
        android:height="50sp"
        android:text="@string/store_points"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:id="@+id/storeDescrip"
        android:text="@string/store_description"
        android:textSize="20sp" />

</LinearLayout>